<resources>
    <string name="app_name">Social</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_network">STUDENT NETWORK</string>
    <string name="register">Registro</string>
    <string name="login">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="password_confirm">Confirmar Contraseña</string>
    <string name="forgot_password_ask">¿Olvidaste la contraseña?</string>
    <string name="create_new_account">Crear una nueva cuenta</string>
    <string name="continue_with_google">Continuar con Google</string>
    <string name="error_email">Correo electronico inválido</string>
    <string name="error_password">Mínimo 8 caracteres</string>
    <string name="or_enter_with">O ingresa con</string>
    <string name="remember_me">Recuérdame</string>
    <string name="google">Google</string>
    <string name="mastodon">Mastodon</string>
    <string name="sign_up">Regístrate</string>
    <string name="does_not_count">¿No tienes una cuenta?</string>
    <string name="none"> </string>
    <string name="onboarding_register">Regístrate</string>
    <string name="onboarding_connected_world_title">Encuentra amigos y obtén inspiración</string>
    <string name="onboarding_connected_world_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Erat vitae quis quam augue quam a.</string>
    <string name="onboarding_remote_meeting_title">Conoce comunidades increíbles y divertidas</string>
    <string name="onboarding_remote_meeting_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Erat vitae quis quam augue quam a.</string>
    <string name="onboarding_online_friends_title">Chatea con amigos</string>
    <string name="onboarding_online_friends_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Erat vitae quis quam augue quam a.</string>
    <string name="full_name">Nombres completos</string>
    <string name="conditions_register">Al utilizar esta aplicación, acepta los Términos de Servicio</string>
    <string name="join_now">Únete Ahora</string>
    <string name="recover_password">Recuperar contraseña</string>
    <string name="enter_email">Ingresa tu correo electrónico</string>
    <string name="next">Continuar</string>
    <string name="i_have_recovery_code">Tengo un codigo de recuperación</string>
    <string name="return_to_login">Regresa a inicio de sesión</string>
    <string name="submit">Enviar</string>
    <string name="enter_verification_code">Ingrese el código de verificación</string>
    <string name="text_enter_email">Introduce el código que te hemos enviado a tu correo electrónico</string>
    <string name="resend_code">Reenviar código</string>
    <string name="title_message">Mensajes</string>
    <string name="send_message">Escribe tu mensaje</string>
    <string name="speaker">Altavoz</string>
    <string name="mute">Mutear</string>
    <string name="video_camera">Video</string>
    <string name="end_call">Cortar</string>
    <string name="call_in_progress">Llamada en curso</string>
    <string name="edit_photo">Editar foto</string>
    <string name="name">Nombre</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="biography">Biografia</string>
    <string name="add_link">Agregar enlace</string>
    <string name="photo_profile">Foto de perfil</string>
    <string name="user_exists">El usuario existe</string>
    <string name="description">Descripción</string>
    <string name="icon">icono</string>
    <string name="hour">08:39 am</string>
    <string name="user_profile">user_profile</string>
    <string name="user_bibliography">Google Cirtified Ux/Ui Designer</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="number_post">100</string>
    <string name="number_photos">120</string>
    <string name="number_followers">2800</string>
    <string name="number_followings">64</string>
    <string name="post">Post</string>
    <string name="photos">Photos</string>
    <string name="followers">Followers</string>
    <string name="followings">Following</string>
    <string name="featured">Destacados</string>
    <string name="activity">Actividad</string>
    <string name="error_user">Mínimo 6 caracteres</string>
    <string name="error_coincidence">Contraseñas no coinciden</string>
    <string name="HintNewPub">What\'s on your head?</string>
    <string name="button_camera">Botón Camera</string>
    <string name="cover_photo_specifications">Especificaciones de foto de portada</string>
    <string name="photo_weight">Peso max (10 MB)</string>
    <string name="photo_size">Tamaño max (851 x 315 px)</string>
    <string name="photo_specifications_summary">La plataforma acepta estas especificaciones para la foto de portada</string>
    <string name="photo_upload">Cargar foto</string>
    <string name="error_photo_upload">!La foto no cumple con las especificaciones, subir otra foto!</string>
    <string name="publicar">Publicar</string>
    <string name="writes">Escribe lo que estas pensando</string>
    <string name="add_image">Adjuntar imagen</string>
    <string name="add_location">Añadir ubicación</string>
    <string name="add_gif">Adjuntar GIF</string>
    <string name="add_video">Adjuntar video</string>
    <string name="hint_multimedia_post">Máximo 6 fotografías</string>
    <string name="privacy">Publico</string>
    <string name="lima_peru">Lima - Perú</string>
    <string name="information_configuration">Configuración de información personal</string>
    <string name="social_network">Red Social</string>
    <string name="social_link">Link</string>
    <string name="search">Busqueda</string>
    <string name="work">Work</string>
    <string name="count_likes">0</string>
    <string name="count_comments">0</string>
    <string name="count_shares">0</string>
    <string name="count_favorites">0</string>
    <string name="logout">Cerrar sesión</string>
    <string name="title_comment">Comentarios</string>
    <string name="default_comment">Comentar...</string>
    <string name="time_comment">15 h</string>
    <string name="reaction_comment">Reaccionar</string>
    <string name="reply_comment">Responder</string>
    <string name="count_reaction_comment">0</string>
    <string name="comment">Comentar...</string>
    <string name="comment_user">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Erat vitae quis quam augue quam a.</string>
    <string name="count_message">2</string>
    <string name="hour_send_message">15:39</string>
    <string name="contact_name">Full Name</string>
    <string name="message">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
</resources>