<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="30dp"
    tools:context=".presentation.authentication.LoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/syne_bold"
        android:text="@string/student_network"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/text_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="@color/color01"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login"
            android:textSize="18sp" />

          <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/register"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                style="@style/TextInputEditTextStyle"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error_email"
            style="@style/TextViewError"
            android:text="@string/error_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                style="@style/TextInputEditTextStyle"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error_password"
            style="@style/TextViewError"
            android:text="@string/error_password" />

        <CheckBox
            android:id="@+id/checkBox"
            style="@style/TextView16sp"
            android:buttonTint="@color/black"
            android:layout_marginTop="20dp"
            android:text="@string/remember_me" />

        <Button
            android:id="@+id/button_login"
            style="@style/ButtonStyle"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/color01"
            android:textColor="@color/white"
            android:text="@string/login" />

        <TextView
            android:id="@+id/text_forgot_password"
            style="@style/TextViewLinked"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/forgot_password_ask"
            android:layout_gravity="end" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/black" />

            <TextView
                style="@style/TextView16sp"
                android:layout_gravity="center"
                android:text="@string/or_enter_with"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_google"
                style="@style/ButtonStyleSocial"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_google"
                android:text="@string/google" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_mastodon"
                style="@style/ButtonStyleSocial"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_mastodon"
                android:text="@string/mastodon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView16sp"
                android:text="@string/does_not_count" />

            <TextView
                android:id="@+id/text_linked_register"
                style="@style/TextViewLinked"
                android:layout_marginStart="5dp"
                android:text="@string/sign_up"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>