<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/icon_clear"
            android:layout_gravity="end"
            app:tint="@color/color06" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/error_photo_upload"
            android:textColor="@color/color09"
            android:textSize="18dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/cover_photo_specifications"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/photo_weight"
            android:gravity="center"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/photo_size"
            android:gravity="center"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/photo_specifications_summary"
            android:gravity="center"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/button_continue"
            style="@style/ButtonStyle"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/color01"
            android:text="@string/photo_upload"
            android:textColor="@color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>