<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.authentication.LoginActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sign_in_to_continue"
            android:textAlignment="center"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                style="@style/TextInputEditTextStyle"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                style="@style/TextInputEditTextStyle"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/forgot_password_ask"
            android:textAlignment="textEnd"
            android:textColor="@color/color05"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/button_login"
            style="@style/ButtonStyle"
            android:layout_marginBottom="60dp"
            android:text="@string/login"/>

        <Button
            android:id="@+id/button_create_account"
            style="@style/ButtonStyle"
            android:layout_marginBottom="20dp"
            android:text="@string/create_new_account"/>

        <Button
            android:id="@+id/button_continue_google"
            style="@style/ButtonStyle"
            android:text="@string/continue_with_google" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>